# 42-codyssey

./: .env.example  .pre-commit-config.yaml  README.md  config.py  pyproject.toml
0304/1-1/: log_analysis.md  main.py  mission_computer_main.json
0304/1-3/: main.py  text_vs_binary.md
0304/1-4/: design_dome.py  mars_base_main_parts-001.csv  mars_base_main_parts-002.csv  mars_base_main_parts-003.csv
0304/1-6/: mars_mission_computer.py  setting.txt
0304/2-1/: door_hacking.py
0304/2-2/: caesar_cipher_decode.py  dictionary.txt
0304/2-3/: calculator.py
0304/2-7/: javis.py
0304/3-5/: mars_weather_summary.py
0904/3-1/: email_template.html  sendmail.py
0904/3-2/: client.py  server.py
0904/3-4/: index.html  main.py
0904/3-7/: crawling_KBS.py
0904/4/: README.md  client.py  main.py  pyproject.toml  todo_data.csv
0904/4/alembic/: env.py
0904/4/alembic/versions/: 856eafb0a13e_initial_migration_with_todo_question_.py  aed9c0861329_initial_migration_with_todo_question_.py
0904/4/src/application/: dtos.py  ports.py  services.py
0904/4/src/domain/: exceptions.py  models.py  ports.py  repos.py
0904/4/src/infrastructure/adapters_in/: admin.py  answer.py  auth.py  dtos.py  http_api.py  question.py  todo.py
0904/4/src/infrastructure/adapters_out/: csv_repo.py  password_manager.py
0904/4/src/infrastructure/adapters_out/datebase/: daos.py  mappers.py  repos.py  uow.py
0904/4/src/infrastructure/core/: config.py  database.py  dependencies.py  exception_handlers.py
0904/4/src/static/: app.js  index.html  style.css
program_1/mission_1/: log_analysis.md  main.py
program_1/mission_3/: design_dome.py  main.py  text_vs_binary.md
program_1/mission_4/: design_dome.py  parts_to_work_on.csv
program_1/mission_5/: design_dome.py
program_1/mission_6/: mars_mission_computer.py  setting.txt
program_1/mission_7/: mars_mission_computer.py
program_2/mission_1/: door_hacking.py
program_2/mission_2/: caesar_cipher_decode.py  dictionary.txt
program_2/mission_3/: calculator.py
program_2/mission_7/: javis.py
program_2/mission_7/records/: 20250605-203521.csv
program_3/mission_5/: mars_weather_summary.py
