[project]
name = "42-codyssey"
version = "0.1.0"
description = ""
requires-python = "<4.0,>=3.12"
dependencies = [
    "beautifulsoup4<5.0.0,>=4.13.5",
    "requests<3.0.0,>=2.32.5",
]

[dependency-groups]
dev = [
    "pre-commit<5.0.0,>=4.3.0",
    "pytest<9.0.0,>=8.4.2",
    "ruff<1.0.0,>=0.12.12",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
