[project]
name = "42-codyssey"
version = "0.1.0"
description = ""
requires-python = "<4.0,>=3.12"
dependencies = [
    "beautifulsoup4<5.0.0,>=4.13.5",
    "matplotlib<4.0.0,>=3.10.6",
    "mysql-connector-python<10.0.0,>=9.4.0",
    "numpy<3.0.0,>=2.3.3",
    "psutil<8.0.0,>=7.1.0",
    "pyaudio<1.0.0,>=0.2.14",
    "python-dotenv<2.0.0,>=1.1.1",
    "PyQt5==5.15.11",
    "PyQt5-Qt5==5.15.2",
    "requests<3.0.0,>=2.32.5",
    "selenium<5.0.0,>=4.35.0",
    "speechrecognition<4.0.0,>=3.14.3",
    "webdriver-manager<5.0.0,>=4.0.2",
    "fastapi[standard]<1.0.0,>=0.120.4",
    "pydantic<3.0.0,>=2.12.3",
    "pydantic-settings<3.0.0,>=2.11.0",
]

[dependency-groups]
dev = [
    "pre-commit<5.0.0,>=4.3.0",
    "pytest<9.0.0,>=8.4.2",
    "ruff<1.0.0,>=0.12.12",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle Errors
    "W",      # pycodestyle Warnings
    "F",      # Pyflakes (논리적 오류)
    "I",      # isort (import 정렬)
    "B",      # flake8-bugbear (버그 유발 가능성)
    "UP",     # pyupgrade (최신 파이썬 문법)
    # "T20",    # flake8-print (print() 함수 사용 금지)
    # "C901",   # mccabe (코드 복잡도)
    "SIM",    # flake8-simplify (리팩토링 제안)
    # "N",      # pep8-naming (네이밍 컨벤션)
    "C4",     # flake8-comprehensions (Pythonic 코드)
    # "ARG001", # flake8-unused-arguments (사용하지 않는 인자)
    # "ANN",    # flake8-annotations (타입 힌트 누락)
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
