[project]
name = "4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "aiosqlite<1.0.0,>=0.21.0",
    "alembic<2.0.0,>=1.17.1",
    "fastapi[standard]<1.0.0,>=0.121.1",
    "pydantic<3.0.0,>=2.12.4",
    "pydantic-settings<3.0.0,>=2.11.0",
    "requests>=2.32.5",
    "sqlalchemy<3.0.0,>=2.0.44",
]

[dependency-groups]
dev = [
    "pytest<10.0.0,>=9.0.0",
]
