[project]
name = "4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "aiosqlite",
    "alembic",
    "bcrypt",
    "fastapi[standard]",
    "pydantic",
    "pydantic-settings",
    "requests",
    "sqlalchemy",
]

[dependency-groups]
dev = [
    "pytest",
]
